--- a/.github/workflows/build-assets.yml
+++ b/.github/workflows/build-assets.yml
@@ -1,4 +1,4 @@
-name: Fix PHP code styling
+name: "Build assets"
 
 on:
   pull_request:
@@ -9,15 +9,20 @@ jobs:
   if_merged:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Fix PHP code style issues
-        uses: aglipanci/laravel-pint-action@2.3.0
+      - name: Setup Node
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build assets
+        run: npm run build
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Chore: Fix PHP code styling"
+          commit_message: "Chore: build assets"
